--- a/FinalProject/Components/Layout/NavMenu.razor
+++ b/FinalProject/Components/Layout/NavMenu.razor
@@ -1,6 +1,4 @@
 ﻿
-
-
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -13,8 +11,8 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                         <li class="nav-item dropdown">
-                            <a class="nav-link mx-lg-2 active text-white dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="nav-link mx-lg-2 active text-white dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
+                            <ul class="nav-link dropdown-toggle" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider"></li>
@@ -25,7 +23,7 @@
                             <a class="nav-link mx-lg-2 text-white" href="/weather">Counter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 text-white" href="Error">Portfolio</a>
+                            <a class="nav-link mx-lg-2 text-white" href="CreateAudiencia">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 text-white" href="#">Contact</a>
