--- a/FinalProject/Components/_Imports.razor
+++ b/FinalProject/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using FinalProject
 @using FinalProject.Client
 @using FinalProject.Components
+@using Shared1.Models
+@using Shared1.Detalles
+@using Radzen.Blazor
