--- a/FinalProject.Client/_Imports.razor
+++ b/FinalProject.Client/_Imports.razor
@@ -7,4 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using FinalProject.Client
+@using Shared.Models
+@using Radzen
+@using Radzen.Blazor
 
