--- a/FinalProject/Components/Layout/NavMenu.razor
+++ b/FinalProject/Components/Layout/NavMenu.razor
@@ -11,13 +11,24 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                         <li class="nav-item dropdown">
-                            <a class="nav-link mx-lg-2 active text-white dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
+
+                            <Dropdown>
+                                <DropdownToggleButton Color="ButtonColor.Secondary">Home</DropdownToggleButton>
+                                <DropdownMenu>
+                                    <DropdownItem To="/CreateAudiencia" Type="ButtonType.Link">Demandas</DropdownItem>
+                                    <DropdownItem To="#" Type="ButtonType.Link">Audiencias</DropdownItem>
+                                   
+                                </DropdownMenu>
+                            </Dropdown>
+
+
+                            @* <a class="nav-link mx-lg-2 active text-white dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
                             <ul class="nav-link dropdown-toggle" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            </ul> *@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 text-white" href="/weather">Counter</a>
@@ -28,6 +39,8 @@
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 text-white" href="#">Contact</a>
                         </li>
+                           
+
                     </ul>
                 </div>
             </div>
