--- a/FinalProject/Components/Layout/NavMenu.razor.css
+++ b/FinalProject/Components/Layout/NavMenu.razor.css
@@ -4,6 +4,14 @@
 }
 
 
+.custom-dropdown {
+    border: none;
+    box-shadow: none;
+    padding: 0.5rem 1rem;
+
+}
+
+
 .navbar {
     background-color: #012E40;
 }
