--- a/FinalProject/Components/Layout/NavMenu.razor
+++ b/FinalProject/Components/Layout/NavMenu.razor
@@ -1,39 +1,30 @@
 ﻿
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <img class="navbar-brand me-auto" src="Logo.png">
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link mx-lg-2 active text-white dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
-                            <ul class="nav-link dropdown-toggle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-lg-2 text-white" href="/weather">Counter</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-lg-2 text-white" href="CreateAudiencia">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-lg-2 text-white" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <img class="navbar-brand me-auto" src="Logo.png">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <a class="login-button text-white" data-bs-toggle="modal" data-bs-target="#cerrar-sesion-modal">Cerrar Sesi&oacute;n</a>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                    <li class="nav-item ">
+                        <a class="nav-link  text-white" role="button" >Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-2 text-white" href="/weather">Counter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-2 text-white" href="CreateAudiencia">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-2 text-white" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav>
-
-</div>
-
+        <a class="login-button text-white" data-bs-toggle="modal" data-bs-target="#cerrar-sesion-modal">Cerrar Sesi&oacute;n</a>
+    </div>
+</nav>
