--- a/FinalProject/Components/Layout/NavMenu.razor
+++ b/FinalProject/Components/Layout/NavMenu.razor
@@ -17,10 +17,10 @@
                         <a class="nav-link mx-lg-2 text-white" href="/weather">Counter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-2 text-white" href="CreateAudiencia">Portfolio</a>
+                        <a class="nav-link mx-lg-2 text-white" href="IndexAudiencia">Audiencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-2 text-white" href="#">Contact</a>
+                        <a class="nav-link mx-lg-2 text-white" href="#">Empleado</a>
                     </li>
                 </ul>
             </div>
