--- a/FinalProject/Components/Layout/NavMenu.razor.css
+++ b/FinalProject/Components/Layout/NavMenu.razor.css
@@ -3,13 +3,13 @@
     width: 200px;
 }
 
-
+/*
 .custom-dropdown {
     border: none;
     box-shadow: none;
     padding: 0.5rem 1rem;
 
-}
+}*/
 
 
 .navbar {
@@ -31,7 +31,7 @@
         background-color: #5a0c0c;
     }
 
-.navbar-toggler {
+/*.navbar-toggler {
     border: none;
     font-size: 1.25rem;
 }
@@ -39,7 +39,7 @@
     .navbar-toggler:focus, .btn-close:focus {
         box-shadow: none;
         outline: none;
-    }
+    }*/
 
 .nav-link {
     color: #666777;
@@ -51,22 +51,22 @@
         color: #000;
     }
 
-@media(min-width:991px) {
-    .nav-link::before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 0;
-        height: 2px;
-        background-color: white;
-        visibility: hidden;
-        transition: 0.3s ease-in-out;
-    }
 
-    .nav-link:hover::before, .nav-link.active::before {
-        width: 100%;
-        visibility: visible;
-    }
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: white;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
 }
+
+.nav-link:hover::before, .nav-link.active::before {
+    width: 100%;
+    visibility: visible;
+}
+
