Cambiando el AudienciaPages a Audiencias

--- a/FinalProject/Components/Layout/NavMenu.razor
+++ b/FinalProject/Components/Layout/NavMenu.razor
@@ -20,7 +20,7 @@
                         <a class="nav-link mx-lg-2 text-white" href="IndexAudiencia">Audiencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-2 text-white" href="#">Empleado</a>
+                        <a class="nav-link mx-lg-2 text-white" href="IndexEmpleado">Empleado</a>
                     </li>
                 </ul>
             </div>
